--- a/templates/support/support.html
+++ b/templates/support/support.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 <div class="row support-wrapper">
-    <div class="col-xs-5 form-support">
+    <div class="col-sm-6">
         <div class="page-header">
             <h2>
                 {% trans "Send Message" %}
@@ -44,7 +44,7 @@
         </form>
     </div>
 
-    <div class="col-xs-5 info-support">
+    <div class="col-sm-6 info-support">
     	<div class="info-address">
 	        <p class="support-arddress">Email</p>
 	        <p>abc@website.com</p>
