Fix withdraw address modal

--- a/templates/orders/partials/forms/withdraw_address_widget.html
+++ b/templates/orders/partials/forms/withdraw_address_widget.html
@@ -12,8 +12,6 @@
         {% if order.frozen %}
             style="display:none"
         {% endif %}>
-
-        <i class="fa fa-pencil" aria-hidden="true"></i>
         <span class="withdraw_address" id="span-withdraw-{{order.pk}}"
             data-toggle="popover"
             title="{% trans 'Set Withdraw Address' %}"
@@ -23,6 +21,8 @@
             data-pk="{{order.pk}}"
             data-url-update="{% url 'orders.update_withdraw_address' order.pk %}"
             data-url-create="{% url 'accounts.create_withdraw_address' %}">
-            {{order.withdraw_address.address | default_if_none:"Not Defined"}}
+            {{order.withdraw_address.address |default:"Not Defined"}}
+        </span>
+        <span class="fa fa-pencil" aria-hidden="true">
         </span>
 </span>
