--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -1048,7 +1048,6 @@ body #nprogress .spinner-icon {
     display: inline-block;
     font-size: 32px;
     border:0;
-    width: 100%;
 }
 
 .register .controls {
@@ -1120,13 +1119,17 @@ body #nprogress .spinner-icon {
 }
 
 .info-address {
-	padding-bottom: 70px;
+    margin: 10px 0 30px 0;
 }
 
 .support-arddress {
 	color: #8dc73f;
 	font-size: 18px;
 	font-weight: 700;
+}
+
+p.support-link a{
+    color:#000;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 568px) {
