--- a/templates/orders/partials/forms/withdraw_address_widget.html
+++ b/templates/orders/partials/forms/withdraw_address_widget.html
@@ -5,7 +5,7 @@
     {% endif %}>
 
     <span class="frozen">
-        {{order.withdraw_address.address | default_if_none:"Not Defined"}}
+        {{order.withdraw_address.address | default:_("Not Defined")}}
     </span>
 </span>
 <span id="td-withdraw-{{order.pk}}"
@@ -21,7 +21,7 @@
             data-pk="{{order.pk}}"
             data-url-update="{% url 'orders.update_withdraw_address' order.pk %}"
             data-url-create="{% url 'accounts.create_withdraw_address' %}">
-            {{order.withdraw_address.address |default:"Not Defined"}}
+            {{order.withdraw_address.address |default:_("Not Defined")}}
         </span>
         <span class="fa fa-pencil" aria-hidden="true">
         </span>
