--- a/templates/support/support.html
+++ b/templates/support/support.html
@@ -3,33 +3,15 @@
 {% load i18n %}
 
 {% block main %}
-    <div class="collapse navbar-collapse menupanel">
-        <ul class="nav navbar-nav">
-            {% for c in cmsmenu %}
-                <li class="{% if  c.0 in request.get_full_path %}active{% endif %}">
-                	{% if c.1 == "Support" %}
-                	    <a href="/{{ c.0 }}">
-                	    	{{ c.1 }}
-                	    </a>
-                	{% else %}
-                        <a href="/articles/{{ c.0 }}">
-                            {{ c.1 }}
-                        </a>
-                    {% endif %}
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div class="cms_header">
-        <div class="line-order">
-        </div>
-    </div>
+{% include "articles/partials/cms_header.html" %}
 <div class="row support-wrapper">
     <div class="col-sm-6">
-        <div class="page-header">
-            <h2>
-                {% trans "Send Message" %}
-            </h2>
+        <div class="page-header cms_header">
+                <h2>
+                    {% trans "Contact us" %}
+                </h2>
+            <div class="line-order">
+            </div>
         </div>
         <form method="post" class="form">{% csrf_token %}
             {% if user.is_authenticated %}
@@ -47,24 +29,32 @@
     <div class="col-sm-6 info-support">
     	<div class="info-address">
 	        <p class="support-arddress">Email</p>
-	        <p>abc@website.com</p>
+            <p class="support-link">
+                <a href="mailto:{% trans "support@nexchange.co.uk" %}" target="_blank">
+                    {% trans "support@nexchange.co.uk" %}
+                </a>
+            </p>
 	    </div>
+{#	    <div class="info-address">#}
+{#	        <p class="support-arddress">Phone</p>#}
+{#	        <p>+000 000 00 00</p>#}
+{#	    </div>#}
 	    <div class="info-address">
-	        <p class="support-arddress">Phone</p>
-	        <p>+000 000 00 00</p>
-	    </div>
-	    <div class="info-address">
-	        <p class="support-arddress">ICQ</p>
-	        <p>000 000 00 00</p>
+	        <p class="support-arddress">Twitter</p>
+            <p class="support-link">
+                <a href="https://twitter.com/NexchangeBTC" target="_blank">
+                    @NexchangeBTC
+                </a>
+            </p>
 	    </div>
 	    <div class="info-address">
 	        <p class="support-arddress">Telegram</p>
-	        <p>000 000 00 00</p>
+	        <p class="support-link">
+                <a href="https://telegram.me/NexchangeBTC" target="_blank">
+                    @NexchangeBTC
+                </a>
+            </p>
 	    </div>
-	    <div class="info-address">
-	        <p class="support-arddress">Whatsapp</p>
-	        <p>+000 000 00 00</p>
-	    </div>	
     </div>
 
 </div>
