Enahnce tests for passive authentication workflow

--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="col-md-4">
-                    <a href="#" class="btn btn-success btn-sm pull-right" id="resend_sms_button" data-url="{% url 'core.resend_sms' %}">
+                    <a href="#" class="btn btn-success btn-sm pull-right" id="resend_sms_button" data-url="{% url 'accounts.resend_sms' %}">
                         <i class="fa fa-repeat" aria-hidden="true"></i>&nbsp;{% trans "Send-me the token again" %}
                     </a>
                 </div>
