--- a/templates/payments/partials/modals/payment_options.html
+++ b/templates/payments/partials/modals/payment_options.html
@@ -17,7 +17,7 @@
     <div class="payment_title">
         {% trans 'Wallets' %}
     </div>
-    {% include 'payments/partials/modals/card.html' with card_type='Qiwi Wallet' icon='icons/small/qiwi.png' card=cards.qiwi %}
+    {% include 'payments/partials/modals/card.html' with card_type='qiwi' label='Qiwi Wallet' icon='icons/small/qiwi.png' card=cards.qiwi %}
     {% if type == 'buy' %}
             {% include 'payments/partials/modals/card.html' with card_type='Robokassa' icon='icons/small/robokass.png' card=cards.robokass %}
     {% endif %}
@@ -33,7 +33,7 @@
         {% include 'payments/partials/modals/card.html' with card_type='Sberbank' label='Sberbank' icon='icons/small/sber.png' card=cards.sber %}
         {% include 'payments/partials/modals/card.html' with card_type='Sepa' label='Sepa' icon='icons/small/sepa.png' card=cards.alfa %}
     {% else %}
-        {% include 'payments/partials/modals/card.html' with card_type='Card 2 Card' label='Card 2 Card' icon='icons/small/c2c.ico' %}
+        {% include 'payments/partials/modals/card.html' with card_type='c2c' label='Card 2 Card' icon='icons/small/c2c.ico' %}
     {% endif %}
     {% include 'payments/partials/modals/card.html' with card_type='Cash' label='Cash' icon='icons/small/cash.png' card=cards.alfa %}
 </div>
