Create verification module: Upload and download views Upload and download views

--- a/templates/core/partials/menu.html
+++ b/templates/core/partials/menu.html
@@ -51,6 +51,11 @@
                         {% trans "Referrals" %}
                     </a>
                 </li>
+                <li class="{% if request.resolver_match.url_name == 'verification.upload' %} active {% endif %}">
+                    <a href="{% url 'verification.upload'%}">
+                        {% trans "Verification" %}
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
