--- a/templates/referrals/index_referrals.html
+++ b/templates/referrals/index_referrals.html
@@ -49,7 +49,7 @@
 
 
                   <div>
-                      <div class = "headers-mobile header-text">{% trans "Revenua" %}</div>
+                      <div class = "headers-mobile header-text">{% trans "Revenue" %}</div>
                       {{ ref.revenue }}
                   </div>
 
@@ -73,7 +73,7 @@
   					<th>{% trans "Partial phone" %}</th>
   					<th >{% trans "Confirmed orders count" %}</th>
   					<th>{% trans "Turnover" %}</th>
-  					<th>{% trans "Revenua" %}</th>
+  					<th>{% trans "Revenue" %}</th>
   					<th>{% trans "Last seen" %}</th>
   					<th>{% trans "Id" %}</th>
   				</tr>
