Fix Verification view. Add paths by name to documents.

--- a/templates/verification/upload.html
+++ b/templates/verification/upload.html
@@ -1,56 +1,86 @@
 {% extends "core/base.html" %}
 {% load bootstrap3 %}
+{% load staticfiles %}
 {% load i18n %}
 
 {% block main %}
-<form method="post" class="form" enctype="multipart/form-data" action="">
-    {% csrf_token %}
 
-    {% bootstrap_form form %}
 
-    <input type="submit" name="submit" id="submit" class="btn btn-success btn-lg" value="{% trans "Upload" %}"/>
-</form>
-<div class="table-responsive visible-md visible-lg">
-    <table class=" table-hover table-condensed col-lg-12">
-        <tr>
-            <th >{% trans "Created on" %}</th>
-            <th >{% trans "Identity Document" %}</th>
-            <th >{% trans "Utility Document" %}</th>
-        </tr>
-        {% for ver in verifications %}
-            <tr>
-                <td>{{ ver.created_on}}</td>
-                <td>
-                    <a href="{% url 'verification.download' ver.identity_document.name %}"
-                        style="text-decoration:None">
-                        {% if ver.id_status == 'OK' %}
-                            <i class="fa fa-check-square-o"></i>
-                        {% elif ver.id_status == 'REJECTED' %}
-                            <i class="fa fa-exclamation-triangle"></i>
-                        {% elif ver.id_status == 'NONE' %}
-                            <i class="fa fa-square-o"></i>
-                        {% endif %}
-                        {% trans "Download here" %}
-                    </a>
-                </td>
-                </td>
-                <td>
-                    <a href="{% url 'verification.download' ver.utility_document.name %}"
-                        style="text-decoration:None">
-                        {% if ver.util_status == 'OK' %}
-                            <i class="fa fa-check-square-o"></i>
-                        {% elif ver.util_status == 'REJECTED' %}
-                            <i class="fa fa-exclamation-triangle"></i>
-                        {% elif ver.util_status == 'NONE' %}
-                            <i class="fa fa-square-o"></i>
-                        {% endif %}
-                        {% trans "Download here" %}
-                    </a>
-                </td>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
+<div class="page-header">
+	<h1>
+		{% trans "Upload Verification" %}<small> {{ action }} </small>
+	</h1>
+    <div class="line-order" >
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+
+        <form method="post" class="form" enctype="multipart/form-data" action="">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <input type="submit" name="submit" id="submit" class="btn btn-success btn-lg" value="{% trans "Upload" %}"/>
+        </form>
+
+		<div class="table-responsive visible-md visible-lg ">
+			  <table class=" table-hover table-condensed col-lg-12">
+  				<tr class="table-order">
+                    <th >{% trans "Created on" %}</th>
+                    <th >{% trans "Identity Document" %}</th>
+                    <th >{% trans "Utility Document" %}</th>
+  				</tr>
+                {% for ver in verifications %}
+                    <tr>
+                        <td>{{ ver.created_on}}</td>
+                        <td>
+                            {% if ver.identity_document %}
+                                <a href="{% url 'verification.download' ver.identity_document.name %}"
+                                    style="text-decoration:None">
+                                    {% if ver.id_status == 'OK' %}
+                                        <i class="fa fa-check-square-o"></i>
+                                    {% elif ver.id_status == 'REJECTED' %}
+                                        <i class="fa fa-exclamation-triangle"></i>
+                                    {% elif ver.id_status is None %}
+                                        <i class="fa fa-square-o"></i>
+                                    {% endif %}
+                                    {% trans "Download here" %}
+                                </a>
+                                {% else %}
+                                -
+                            {% endif %}
+                        </td>
+                        </td>
+                        <td>
+                            {% if ver.utility_document %}
+                                <a href="{% url 'verification.download' ver.utility_document.name %}"
+                                    style="text-decoration:None">
+                                    {% if ver.util_status == 'OK' %}
+                                        <i class="fa fa-check-square-o"></i>
+                                    {% elif ver.util_status == 'REJECTED' %}
+                                        <i class="fa fa-exclamation-triangle"></i>
+                                    {% elif ver.util_status is None %}
+                                        <i class="fa fa-square-o"></i>
+                                    {% endif %}
+                                    {% trans "Download here" %}
+                                </a>
+                                {% else %}
+                                -
+                            {% endif %}
+                        </td>
+                        </td>
+                    </tr>
+                    {% empty %}
+
+		    		<tr>
+		    			<td colspan="10">
+		    				<h3>{% trans "No documents found" %}</h3>
+		    		    </td>
+		    		</tr>
+                {% endfor %}
+            </table>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
