Add OKpay card to buy order

--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -855,7 +855,8 @@ html body .modal-content {
 }
 
 .supporetd_payment img, .payment-type-trigger,
-.og-resource {
+.og-resource,
+input.payment-icon {
     max-width: 100%;
     height: auto;
     padding: 20px 0;
@@ -863,17 +864,20 @@ html body .modal-content {
     filter: grayscale(100%);
     opacity: 0.4;
     cursor: pointer;
+
 }
 
 .payment-type-trigger,
-.payment-type-trigger:hover{
+.payment-type-trigger:hover,
+input.payment-icon {
     cursor: pointer;
 }
 
 .supporetd_payment img:hover,
 .payment-type-trigger:hover,
 .payment-type-trigger:hover .round-button,
-.og-resource:hover {
+.og-resource:hover,
+input.payment-icon:hover{
     color: #8cc63f;
     /*#71a131*/
     filter: grayscale(0);
