--- a/templates/orders/partials/steps/step_amount.html
+++ b/templates/orders/partials/steps/step_amount.html
@@ -53,6 +53,10 @@
     {% include 'payments/partials/modals/payment_type.html' with id="UserAccountModal" type="sell" %}
     <div class="paymentSelectionContainer">
     </div>
-    {% include 'payments/partials/modals/sell.html' with id="CardSellModal" method="card" form="card" legend="Add a new payout card" %}
-    {% include 'payments/partials/modals/sell.html' with id="QiwiSellModal" type="wallet" form="phone" legend="Add a new payout wallet" %}
+    {% include 'payments/partials/modals/sell.html' with id="c2cSellModal" form="card" legend="Get pay with card to card transfer" icon="icons/small/c2c.ico" %}
+    {% include 'payments/partials/modals/sell.html' with id="paypalSellModal" form="card" legend="Get paid with PayPal" icon="icons/small/paypal.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="qiwiSellModal" form="phone" legend="Get paid with Qiwi Wallet" icon="icons/small/qiwi.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="sepaSellModal" form="iban" legend="Get paid using a SEPA trasnfer" icon="icons/small/sepa.png" %}
+    {% include 'payments/partials/modals/sell.html' with id="swiftSellModal" form="swift" swift_fields="true" legend="Get paid using a SWIFT transfer" icon="icons/small/swift.png" %}
+
 {% endblock %}
