--- a/templates/payments/partials/modals/sell.html
+++ b/templates/payments/partials/modals/sell.html
@@ -1,16 +1,24 @@
 {% load i18n %}
+{% load static %}
 <!-- Modal -->
 <div class="modal fade sellMethModal" id="{{ id }}" role="dialog">
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header text-left">
           <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4 class="modal-title">{% trans 'Select payout option' %}</h4>
+            <div class="row">
+                <div class="col-sm-9 col-sm-offset-1">
+                    <img src="{% static icon %}" alt="" class="sell-img">
+                    <h4>{% trans legend %}</h4>
+                </div>
+            </div>
+
         </div>
         <div class="modal-body">
             <div class="payment-widget">
                 {% if user.is_authenticated and addresses %}
+                  <h4 class="modal-title">{% trans 'Previously used' %}</h4>
                     <div class="row">
                         <h4 class="modal-title">
                             {% trans 'Pick one of your saved accounts' %}
@@ -18,7 +26,7 @@
                     </div>
                     <div class="row">
                         <div class="col col-xs-12">
-                            {% include 'core/partials/user_address.html' %}
+                            {% include 'core/partials/select_widget.html' %}
                             <input type="hidden" name="user_address_id" id="user_address_id" value="">
                         </div>
                     </div>
@@ -30,8 +38,8 @@
                 {% endif %}
                 {% include 'payments/partials/forms/'|add:form|add:'.html' with legend=legend %}
                 <div class="row">
-                    <div class="col-sm-4 col-sm-offset-4">
-                        <span class="btn btn-primary save save-card">{% trans "Go" %}</span>
+                    <div class="col-sm-9 col-sm-offset-1 text-left">
+                        <span class="btn btn-primary save save-card">{% trans "Save card" %}</span>
                     </div>
                 </div>
             </div>
