--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -12,27 +12,37 @@
             {{ order.payment_preference.payment_method.name }}
         </div>
         <div class="row">
-            <div class="col col-lg-12">
+            <div class="col col-xs-12">
                 <p><strong>{{order.payment_preference.identifier}}</strong></p>
             </div>
         </div>
         <div class="row">
-            <div class="col col-lg-12">
+            <div class="col col-xs-12">
                 {% trans 'Please put the following reference in the comment:' %}
             </div>
         </div>
         <div class="row">
-            <div class="col col-lg-12 unique_ref">
+            <div class="col col-xs-12 unique_ref">
                 <p><strong>{{unique_ref}}</strong></p>
             </div>
         </div>
-        <div class="col col-lg-12">
+
+        <div class="col col-xs-12">
          {% trans 'Notice that you must pay until' %}
         </div>
         {% localtime on %}
-        <div class="col col-lg-12" id="pay_until_notice">
+        <div class="col col-xs-12" id="pay_until_notice">
             <p><strong>{{pay_until |date:"H:iA (e)"}}</strong></p>
         </div>
+
+        <div class="col-xs-12">
+            <input type="checkbox" id="default_order_trigger">
+            {% blocktrans %}
+                Credit my withdraw address automatically with any further funds
+                sent by you to our account automatically
+            {% endblocktrans %}
+        </div>
+
         {% endlocaltime %}
     </div><!-- /pannel-body -->
 </div><!-- /pannel -->
