--- a/templates/payments/partials/forms/phone.html
+++ b/templates/payments/partials/forms/phone.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <form action="/">
     <div class="row">
-        <div class="col col-lg-12">
+        <div class="col col-xs-9 col-xs-offset-1 text-left">
             <label for="phone">{% trans label %} </label>
                 <input type="text" name="phone" class="phone val"
                        value="{% if user.is_authenticated  %}{{ user.profile.phone }}
