--- a/templates/orders/partials/modals/success_order.html
+++ b/templates/orders/partials/modals/success_order.html
@@ -41,6 +41,7 @@
                    data-keyboard="false">
                     {% trans 'Go to Robokassa' %}
                 </a>
+            {% else %}
                 <a href="{% url 'orders.orders_list' %}?oid={{ order.pk }}" class="btn btn-success">{% trans 'Get your bitcoins' %}</a>
             {% endif %}
         </div>
