--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -6,11 +6,6 @@
 <div class="panel panel-success">
     <div class="panel-body">
         <h1>{% trans 'Order placed successfully' %}</h1>
-            <div class="row">
-                <div class="col col xs-12"></div>
-                {% trans 'Please make payment to the following' %}
-                {{ order.payment_preference.payment_method.name }}
-            </div>
 
             <div class="row">
                 <div class="col col-xs-12 our_acc">
@@ -55,6 +50,36 @@
                        <input type="image" class="payment-icon"
                               name="submit" alt="OKPAY Payment"
                               src="/static/icons/small/okpay_green.png"/>
+                    </form>
+                </div>
+            </div>
+            {% elif order.payment_preference.payment_method.name == 'Payeer Wallet' %}
+            <div class="row">
+                <div class="col col-xs-10 col-xs-offset-1 success-line mid">
+                    <span class="line green">
+                        <h4 class="header">
+                            <span>
+                                {% trans 'OR' %}
+                            </span>
+                        </h4>
+                    </span>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-xs-12">
+                    {% trans 'proceed to automatic-checkout' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-xs-12">
+                    <form method="post" action="https://payeer.com/merchant/">
+                        <input type="hidden" name="m_shop" value="{{ payeer_shop }}"/>
+                        <input type="hidden" name="m_orderid" value="{{ order.unique_reference }}"/>
+                        <input type="hidden" name="m_amount" value="{{ amount_cash }}"/>
+                        <input type="hidden" name="m_curr" value="{{ order.currency.code }}"/>
+                        <input type="hidden" name="m_desc" value="{{ payeer_desc }}"/>
+                        <input type="hidden" name="m_sign" value="{{ payeer_sign }}"/>
+                        <input type="image" class="payment-icon" name="submit" alt="Payeer Payment" src="/static/icons/small/payeer.png"/>
                     </form>
                 </div>
             </div>
