--- a/templates/orders/partials/modals/success_order.html
+++ b/templates/orders/partials/modals/success_order.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="success-line col-xs-12">
                         <span class="line">
-                            <h2>
+                            <h2 class="header">
                                 <span>{% trans 'Success' %}</span>
                             </h2>
                         </span>​
