--- a/static/css/overrides_old.css
+++ b/static/css/overrides_old.css
@@ -259,11 +259,12 @@ html body .ui-state-default{
 }
 
 
-.unique_ref {
+.unique_ref, .our_acc {
     text-transform: uppercase;
     font-weight: bold;
     font-size: 18px;
 }
+
 
 .col-centered{
     float: none;
