--- a/templates/orders/partials/modals/order_success_buy.html
+++ b/templates/orders/partials/modals/order_success_buy.html
@@ -6,6 +6,11 @@
 <div class="panel panel-success">
     <div class="panel-body">
         <h1>{% trans 'Order placed successfully' %}</h1>
+            <div class="row">
+                <div class="col col xs-12"></div>
+                {% trans 'Please make payment to the following' %}
+                {{ order.payment_preference.payment_method.name }}
+            </div>
 
             <div class="row">
                 <div class="col col-xs-12 our_acc">
