--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -1,8 +1,8 @@
-{% extends "registration/registration_base.html" %}
+{% extends "core/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
 
-{% block formcontent %}
+{% block main %}
 
 <h2>Email sent!</h2>
 
